# notes

./: README.md
notes-backend/: .gitignore  Cargo.toml  README.md
notes-backend/src/: ai.rs  app.rs  datatypes.rs  lib.rs  main.rs  query.rs  summarize_prompt.txt  transcription.rs  upload.rs
notes-backend/src/pages/: home.rs
notes-frontend/: Cargo.toml  styles.css
notes-frontend/src/: app.rs  main.rs  upload.rs
notes-frontend/src-tauri/: Cargo.toml  tauri.conf.json
notes-frontend/src-tauri/capabilities/: default.json
notes-frontend/src-tauri/src/: lib.rs  main.rs
